firmware/lib/control-table/tests/ui/enum_on_struct.stderr
error: Enum can only be derived for enums
 --> tests/ui/enum_on_struct.rs:4:1
  |
4 | / #[repr(u8)]
5 | | struct NotAnEnum {
6 | |     x: u8,
7 | | }
  | |_^

error[E0517]: attribute should be applied to an enum
 --> tests/ui/enum_on_struct.rs:4:8
  |
4 |   #[repr(u8)]
  |          ^^
5 | / struct NotAnEnum {
6 | |     x: u8,
7 | | }
  | |_- not an enum
